fix level select not wrapping

--- a/css/home.css
+++ b/css/home.css
@@ -430,7 +430,6 @@ img {
   top: 25%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
-  white-space: nowrap;
 }
 
 .container-devConsole {
